Fixed Header Overlap on Smaller Devices and Scroll Overlapping Header

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 }
 
 body {
+    overflow-x: hidden;
+    scrollbar-gutter: stable;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -14,7 +16,8 @@ body {
 }
 
 header {
-    width: 100vw;
+    background-color: black;
+    width: 100%;
     height: 120px;
     margin: 0;
     padding: 0;
@@ -24,7 +27,7 @@ header {
 }
 
 header div {
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -76,6 +79,8 @@ header div nav div {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
     border: solid;
     border-radius: 5%;
     border-color: var(--borderColor);
@@ -95,6 +100,8 @@ body section {
     margin: 0;
     padding-left: 30px;
     padding-right: 30px;
+
+    word-wrap: break-word;
     color: var(--paragraphColor);
 }
 
